# sheldor

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  app.py  logging_config.py  pyproject.toml  requirements.txt
notebooks/: data_preparation.ipynb
sheldor/: __init__.py  config.py  document_processor.py  exceptions.py  logging_config.py  main.py  models.py  ui.py
tests/: test_sheldor.py
