[tool.poetry]
name = "sheldor"
version = "0.1.0"
description = "\"Sheldor: Serious Conversations Only, Sarcasm Detector Included?\""
authors = ["omkarudawant <omkarudawant97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
asgiref = "3.8.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
backoff = "2.2.1"
bcrypt = "4.1.2"
build = "1.2.1"
cachecontrol = "0.14.0"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.3"
chromadb = "0.5.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
crashtest = "0.4.1"
dataclasses-json = "0.6.4"
deprecated = "1.2.14"
distlib = "0.3.8"
dulwich = "0.21.7"
exceptiongroup = "1.2.1"
fastapi = "0.110.2"
fastjsonschema = "2.19.1"
filelock = "3.13.4"
flatbuffers = "24.3.25"
frozenlist = "1.4.1"
fsspec = "2024.3.1"
google-auth = "2.29.0"
googleapis-common-protos = "1.63.0"
greenlet = "3.0.3"
grpcio = "1.62.2"
h11 = "0.14.0"
httptools = "0.6.1"
huggingface-hub = "0.22.2"
humanfriendly = "10.0"
idna = "3.7"
importlib-metadata = "7.0.0"
importlib-resources = "6.4.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jsonpatch = "1.33"
jsonpointer = "2.4"
keyring = "24.3.1"
kubernetes = "29.0.0"
langchain = "0.1.16"
langchain-community = "0.0.34"
langchain-core = "0.1.45"
langchain-text-splitters = "0.0.1"
langsmith = "0.1.50"
markdown-it-py = "3.0.0"
marshmallow = "3.21.1"
mdurl = "0.1.2"
mmh3 = "4.1.0"
monotonic = "1.6"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
oauthlib = "3.2.2"
onnxruntime = "1.17.3"
opentelemetry-api = "1.24.0"
opentelemetry-exporter-otlp-proto-common = "1.24.0"
opentelemetry-exporter-otlp-proto-grpc = "1.24.0"
opentelemetry-instrumentation = "0.45b0"
opentelemetry-instrumentation-asgi = "0.45b0"
opentelemetry-instrumentation-fastapi = "0.45b0"
opentelemetry-proto = "1.24.0"
opentelemetry-sdk = "1.24.0"
opentelemetry-semantic-conventions = "0.45b0"
opentelemetry-util-http = "0.45b0"
orjson = "3.10.1"
overrides = "7.7.0"
packaging = "23.2"
pandas = "2.2.2"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.1"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
posthog = "3.5.0"
protobuf = "4.25.3"
ptyprocess = "0.7.0"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pydantic = "2.7.1"
pydantic-core = "2.18.2"
pygments = "2.17.2"
pypika = "0.48.9"
pyproject-hooks = "1.0.0"
pyreadline3 = "3.4.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pywin32-ctypes = "0.2.2"
pyyaml = "6.0.1"
rapidfuzz = "3.8.1"
requests = "2.31.0"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
rsa = "4.9"
scipy = "1.13.0"
setuptools = "69.5.1"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.29"
starlette = "0.37.2"
sympy = "1.12"
tenacity = "8.2.3"
tokenizers = "0.19.1"
tomli = "2.0.1"
tomlkit = "0.12.4"
tqdm = "4.66.2"
trove-classifiers = "2024.4.10"
typer = "0.12.3"
typing-extensions = "4.11.0"
typing-inspect = "0.9.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
virtualenv = "20.26.0"
watchfiles = "0.21.0"
websocket-client = "1.8.0"
websockets = "12.0"
wrapt = "1.16.0"
yarl = "1.9.4"
zipp = "3.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
